--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="topics-container">
             <div class="topic">
-                <p>भारत के प्रमुख बंदरगाह (Major Ports of India)</p>
+                <p>1. भारत के प्रमुख बंदरगाह (Major Ports of India)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1jVVz1VIkQfIp507oggzIZOiTjxRxo_nb/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -34,7 +34,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>Indian_train_system_journy</p>
+                <p>2. Indian_train_system_journy</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1W_IMW-kF0TbKh9cBf6eH_bDZvttqe1VO/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -42,7 +42,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
+                <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -50,7 +50,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
+                <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -58,7 +58,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>प्रथम विश्व युद्ध (First World War)</p>
+                <p>5. प्रथम विश्व युद्ध (First World War)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -66,7 +66,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>प्रथम विश्व युद्ध (First World War)</p>
+                <p>6. प्रथम विश्व युद्ध (First World War)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -74,7 +74,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p> पारिभाषिक शब्द</p>
+                <p>7. पारिभाषिक शब्द</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -82,7 +82,7 @@
             </div>
             <hr>
             <div class="topic">
-                <p>विषय_ वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
+                <p>8. विषय_ वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
