--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/h9mqMpVDZVwvoNPLA" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
@@ -53,7 +53,7 @@
                 <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/GmarJqQpwhLrXkGdA" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
@@ -61,7 +61,7 @@
                 <p>5. प्रथम विश्व युद्ध (First World War)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
@@ -69,7 +69,7 @@
                 <p>6. प्रथम विश्व युद्ध (First World War)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
@@ -77,15 +77,15 @@
                 <p>7. पारिभाषिक शब्द</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/F9EdQsixAkmciWW88" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
             <div class="topic">
-                <p>8. विषय_ वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
+                <p>8. वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
                 <div class="topic-links">
                 <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
                 <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
             </div>
             <hr>
