--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GK-Gyan</title>
+    <title>7pi_Algegras</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -122,6 +122,15 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-para">
+            <p>
+            इस वेबसाइट पर उपलब्ध कराई गई सामग्री - जिसमें टेस्ट पेपर, नोट्स और क्विज़ शामिल हैं - को AI टूल की सहायता से बनाया गया है और इसका उद्देश्य केवल शैक्षिक उद्देश्यों के लिए है। हालाँकि सटीकता सुनिश्चित करने के लिए हर संभव प्रयास किया गया है, फिर भी इसमें त्रुटियाँ या पुरानी जानकारी हो सकती है।</p>
+            <p>
+                यदि आपको कोई गलती या विसंगति नजर आए तो कृपया Nirwair से संपर्क करें, ताकि उन्हें जल्द से जल्द ठीक किया जा सके।
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
