new course added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>7pi_Algegras</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
 
 </head>
@@ -20,116 +24,181 @@
 <body>
     <h1>.Preparation</h1>
     <div class="box">
-        <div class="subject-container">
-            <h3>GK-GS</h3>
-            <p>General Knowledge and General Studies</p>
+        <div>
+            <div class="subject-container">
+                <h3>GK-GS</h3>
+                <p>General Knowledge and General Studies</p>
+            </div>
+            <div class="topics-container">
+                <hr class="hr-top">
+                <div class="topic">
+                    <p>1. भारत के प्रमुख बंदरगाह (Major Ports of India)</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1jVVz1VIkQfIp507oggzIZOiTjxRxo_nb/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/3cmqTjt6apkEF7cMA" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>2. Indian_train_system_journy</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1W_IMW-kF0TbKh9cBf6eH_bDZvttqe1VO/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/KsKqJVj3GkGB2fq96" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/h9mqMpVDZVwvoNPLA" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/GmarJqQpwhLrXkGdA" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>5. प्रथम विश्व युद्ध (First World War)</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>6. प्रथम विश्व युद्ध (First World War)</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>7. पारिभाषिक शब्द</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/F9EdQsixAkmciWW88" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>8. वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>9. CSIR National Aerospace Laboratories भर्ती</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="topics-container">
-            <div class="topic">
-                <p>1. भारत के प्रमुख बंदरगाह (Major Ports of India)</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1jVVz1VIkQfIp507oggzIZOiTjxRxo_nb/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/3cmqTjt6apkEF7cMA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
+        <div>
+            <div class="subject-container">
+                <h3>Maths</h3>
+                <p>Math question for revision</p>
             </div>
-            <hr>
-            <div class="topic">
-                <p>2. Indian_train_system_journy</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1W_IMW-kF0TbKh9cBf6eH_bDZvttqe1VO/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/KsKqJVj3GkGB2fq96" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/h9mqMpVDZVwvoNPLA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/GmarJqQpwhLrXkGdA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>5. प्रथम विश्व युद्ध (First World War)</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>6. प्रथम विश्व युद्ध (First World War)</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>7. पारिभाषिक शब्द</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/F9EdQsixAkmciWW88" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic">
-                <p>8. वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic" style="display: none;">
-                <p>9. CSIR National Aerospace Laboratories भर्ती</p>
-                <div class="topic-links">
-                <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic" style="display: none;">
-                <p>Topic name</p>
-                <div class="topic-links">
-                <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic" style="display: none;" >
-                <p>Topic name</p>
-                <div class="topic-links">
-                <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
-            </div>
-            <hr>
-            <div class="topic" style="display: none;">
-                <p>Topic name</p>
-                <div class="topic-links">
-                <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                <a href="" target="_blank" rel="noopener noreferrer">Play</a></div>
+            <div class="topics-container">
+                <hr class="hr-top">
+                <div class="topic">
+                    <p>1. गणित संशोधन भाग 16_ महत्वपूर्ण प्रश्नावली</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
     <footer>
         <div class="footer-para">
             <p>
-            इस वेबसाइट पर उपलब्ध कराई गई सामग्री - जिसमें टेस्ट पेपर, नोट्स और क्विज़ शामिल हैं - को AI टूल की सहायता से बनाया गया है और इसका उद्देश्य केवल शैक्षिक उद्देश्यों के लिए है। हालाँकि सटीकता सुनिश्चित करने के लिए हर संभव प्रयास किया गया है, फिर भी इसमें त्रुटियाँ या पुरानी जानकारी हो सकती है।</p>
+                इस वेबसाइट पर उपलब्ध कराई गई सामग्री - जिसमें टेस्ट पेपर, नोट्स और क्विज़ शामिल हैं - को AI टूल की
+                सहायता से बनाया गया है और इसका उद्देश्य केवल शैक्षिक उद्देश्यों के लिए है। हालाँकि सटीकता सुनिश्चित करने
+                के लिए हर संभव प्रयास किया गया है, फिर भी इसमें त्रुटियाँ या पुरानी जानकारी हो सकती है।</p>
             <p>
-                यदि आपको कोई गलती या विसंगति नजर आए तो कृपया Nirwair से संपर्क करें, ताकि उन्हें जल्द से जल्द ठीक किया जा सके।
+                यदि आपको कोई गलती या विसंगति नजर आए तो कृपया संपर्क करें, ताकि उन्हें जल्द से जल्द ठीक किया
+                जा सके।
             </p>
         </div>
+            <p>&copy; 2025 Nirwair. All rights reserved.</p>
     </footer>
 </body>
 
