--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p>1. गणित संशोधन भाग 16_ महत्वपूर्ण प्रश्नावली</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="https://forms.gle/83EWdkViPV3e11fb7" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
