--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="https://drive.google.com/file/d/1W_IMW-kF0TbKh9cBf6eH_bDZvttqe1VO/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/KsKqJVj3GkGB2fq96" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=58415092" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
@@ -189,10 +189,10 @@
     </div>
     <footer>
         <div class="footer-para">
-            <p>
+            <!-- <p>
                 इस वेबसाइट पर उपलब्ध कराई गई सामग्री - जिसमें टेस्ट पेपर, नोट्स और क्विज़ शामिल हैं - को AI टूल की
                 सहायता से बनाया गया है और इसका उद्देश्य केवल शैक्षिक उद्देश्यों के लिए है। हालाँकि सटीकता सुनिश्चित करने
-                के लिए हर संभव प्रयास किया गया है, फिर भी इसमें त्रुटियाँ या पुरानी जानकारी हो सकती है।</p>
+                के लिए हर संभव प्रयास किया गया है, फिर भी इसमें त्रुटियाँ या पुरानी जानकारी हो सकती है।</p> -->
             <p>
                 यदि आपको कोई गलती या विसंगति नजर आए तो कृपया संपर्क करें, ताकि उन्हें जल्द से जल्द ठीक किया
                 जा सके।
