--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 </head>
 
 <body>
-    <h1>.Preparation</h1>
+    <h1>D.EL.ED Preparation 2025</h1>
+    <div class="announcement-bar">
+        <div class="scroll-text">
+            Note: New <em>play quiz</em> has added. Complet it before 31 May otherwise it will automatically expire.
+        </div>
+    </div>
     <div class="box">
         <div>
             <div class="subject-container">
@@ -37,7 +42,7 @@
                         <a href="https://drive.google.com/file/d/1jVVz1VIkQfIp507oggzIZOiTjxRxo_nb/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/3cmqTjt6apkEF7cMA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=13948916" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
@@ -57,8 +62,8 @@
                         <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/h9mqMpVDZVwvoNPLA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
-                    </div>
+                        <a href="https://quizizz.com/join?gc=24303604" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div> 
                 </div>
                 <hr>
                 <div class="topic">
@@ -87,7 +92,7 @@
                         <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=22730740" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
