--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="topic">
+                <div class="topic" style="display: none;">
                     <p>Topic name</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="topic">
+                <div class="topic" style="display: none;">
                     <p>Topic name</p>
                     <div class="topic-links">
                         <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="topic">
+                <div class="topic" style="display: none;">
                     <p>Topic name</p>
                     <div class="topic-links">
                         <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
