new hindi course added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             Note: New <em>play quiz</em> has added. Complet it before 31 May otherwise it will automatically expire.
         </div>
     </div>
+    <div class="test subject-container">
+        <h3>Prectics Test</h3>
+        <ul>
+            <li>Full Test &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
+            <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
+            <li>GK-GS (Small Test) &nbsp;&nbsp;<button>Upcomming...</button></li>
+        </ul> </div>
     <div class="box">
         <div>
             <div class="subject-container">
@@ -155,6 +162,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- New Math subject container starting from here............. -->
         <div>
             <div class="subject-container">
                 <h3>Maths</h3>
@@ -167,6 +176,44 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/83EWdkViPV3e11fb7" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
+
+        <!-- new HINDI subject is starting from here............................... -->
+        <div>
+            <div class="subject-container">
+                <h3>Hindi</h3>
+                <p>Hindi for revision</p>
+            </div>
+            <div class="topics-container">
+                <hr class="hr-top">
+                <div class="topic">
+                    <p>1. हिंदी प्रैक्टिस सेट - 24</p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1JZFBwR5IdY0eAu5sDr-VKQla3V9lnXi0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
